overflow correction

--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,9 @@ button {
   padding: 5px 20px;
   border-radius: 5px;
 }
+.output .textd {
+  overflow-y: scroll;
+}
 button:active {
   background-color: rgba(128, 128, 128, 0.808);
 }
